samples/_failures_safe/1761505975_b1740f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fda5d9c.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_4fda5d9c.c:176:5: error: expected identifier or ‘(’ at end of input
  176 |     char
      |     ^~~~
./samples/SAFE/__tmp_4fda5d9c.c:176:5: error: expected declaration or statement at end of input
